# rotor-rust

./: .gitignore  .gitmodules  CRASH_REPORT.md  Cargo.toml  EQUIVALENCE_PLAN.md  LICENSE  P2_RESULTS.md  PROFILING_RESULTS.md  README.md  generate_paper.py  generate_report.py  index.html  paper.tex
benchmarks/: Dockerfile  Dockerfile.btormc  compile-argv.sh  compile.sh  deep_equivalence_results.csv  deep_equivalence_results_exit1.csv  eqv_combined_sweep.sh  parallel_runner.sh  parallel_runner_exit1.sh  run_deep_equivalence.ps1  run_equivalence_check.ps1
css/: style.css
docs/: VERIFICATION.md
examples/: argv_test1_crash_string.wit  argv_test2_numeric_overflow.btor2  argv_test2_numeric_overflow.wit  argv_test3_length_dependent.btor2  argv_test3_length_dependent.wit  argv_test4_multi_arg.btor2  argv_test5_checksum.btor2  bench_recursive_fibonacci.btor2  division-by-zero-rust.wit  manifest.json  simple-assignment-1-35.wit  tiny-counter.btor2
js/: app.js  graph.js  parser.js  ui-extras.js  witness-player.js  witness.js
presentations/: QA_PREP_5min.md  README.md  Rotor_Presentation_10min.tex  Rotor_Presentation_45min.tex  Rotor_Presentation_Art.tex  Rotor_Presentation_Art02.tex  (+12 more)
rotor/: Cargo.toml
rotor/src/: config.rs  lib.rs  main.rs
rotor/src/btor2/: builder.rs  node.rs  printer.rs  sort.rs
rotor/src/machine/: core.rs  kernel.rs  memory.rs  registers.rs  segmentation.rs  sorts.rs
rotor/src/model/: combinational.rs  generator.rs  mod.rs  properties.rs  sequential.rs
rotor/src/riscv/: compressed.rs  decode.rs  elf_loader.rs  isa.rs
rotor/tests/: golden.rs
(+194 files in other folders)
