[package]
name = "rotor"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
description = "BTOR2 model generator for RISC-V binaries (Rust reimplementation of selfie's rotor)"
repository = "https://github.com/jaspek/rotor-rust"

[dependencies]
goblin = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
